Fixed the nav menu finally!  need to tweek it a bit and think how to make it work on mobile.  also want the selected item to centre itself.

--- a/KudosWiki/Shared/NavMenu.razor.css
+++ b/KudosWiki/Shared/NavMenu.razor.css
@@ -31,6 +31,17 @@ nav {
     width: 100%;
 }
 
+.item-fader {
+    perspective: 500px;
+    opacity: 0;
+    transform: scale(0.7) /*translateY(-50%);*/
+}
+
+    /*.nav-item.active {
+        opacity: 1;
+        transform: scale(1) /*translateY(-50%);
+    }*/
+
 .typeText {
     font-size: xx-large!important;
 }
